--- a/CourseProject/CourseProject.vcxproj
+++ b/CourseProject/CourseProject.vcxproj
@@ -130,11 +130,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Reference Include="Dropbox.Api">
-      <HintPath>components\Dropbox.Api.dll</HintPath>
-    </Reference>
     <Reference Include="EnvDTE">
       <HintPath>EnvDTE</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Vsa">
+      <HintPath>Microsoft.Vsa</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>components\Newtonsoft.Json.dll</HintPath>
@@ -158,11 +158,20 @@
     <Reference Include="Syncfusion.Grid.Windows">
       <HintPath>Syncfusion.Grid.Windows</HintPath>
     </Reference>
+    <Reference Include="Syncfusion.HTMLUI.Base">
+      <HintPath>Syncfusion.HTMLUI.Base</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.HTMLUI.Windows">
+      <HintPath>C:\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies\4.6\Syncfusion.HTMLUI.Windows.dll</HintPath>
+    </Reference>
     <Reference Include="Syncfusion.Pdf.Base">
       <HintPath>Syncfusion.Pdf.Base</HintPath>
     </Reference>
     <Reference Include="Syncfusion.PdfViewer.Windows">
       <HintPath>C:\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies\4.6\Syncfusion.PdfViewer.Windows.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.Scripting.Base">
+      <HintPath>Syncfusion.Scripting.Base</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Shared.Base">
       <HintPath>C:\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies\4.6\Syncfusion.Shared.Base.dll</HintPath>
@@ -208,28 +217,59 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Editor.cpp" />
+    <ClCompile Include="EdtForm.cpp" />
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="JsonUtils.cpp" />
     <ClCompile Include="MyForm.cpp" />
+    <ClCompile Include="ResultsFrm.cpp" />
+    <ClCompile Include="SnippetForm.cpp" />
     <ClCompile Include="SyntaxHighlighter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataModels.h" />
+    <ClInclude Include="Editor.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="EdtForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Functions.h" />
     <ClInclude Include="JsonUtils.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ResultsFrm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="SnippetForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="SyntaxHighlighter.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CourseProject.rc" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Editor.resx">
+      <DependentUpon>Editor.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EdtForm.resx">
+      <DependentUpon>EdtForm.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.h</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ResultsFrm.resx">
+      <DependentUpon>ResultsFrm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SnippetForm.resx">
+      <DependentUpon>SnippetForm.h</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
